--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1.0.99"
 argon2 = "0.5.3"
 axum = "0.8.4"
+axum-extra = { version = "0.10.1", features = ["cookie"] }
 axum-server = "0.7.2"
 dotenvy = "0.15.7"
 image = "0.25.6"
@@ -15,7 +16,8 @@ minijinja-autoreload = "2.11.0"
 num-complex = "0.4.6"
 rand = "0.9.2"
 serde = { version = "1.0.219", features = ["derive"] }
-sqlx =  { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
+sqlx =  { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
 tokio = { version = "1.47.1", features = ["full"] }
+uuid = { version = "1.18.0", features = ["v4"] }
 
 
