trying to implement auth and session management using axum-login

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ argon2 = "0.5.3"
 axum = "0.8.4"
 axum-extra = { version = "0.10.1", features = ["cookie"] }
 axum-server = "0.7.2"
+axum-login = "0.18.0"
 dotenvy = "0.15.7"
 image = "0.25.6"
 minijinja = { version = "2.11.0", features = ["loader"] }
