--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.99"
 argon2 = "0.5.3"
-axum = "0.8.4"
+axum = { version = "0.8.4", features = ["macros"] }
 axum-extra = { version = "0.10.1", features = ["cookie"] }
 axum-server = "0.7.2"
 axum-login = "0.18.0"
@@ -20,5 +20,9 @@ serde = { version = "1.0.219", features = ["derive"] }
 sqlx =  { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
 tokio = { version = "1.47.1", features = ["full"] }
 uuid = { version = "1.18.0", features = ["v4"] }
+tower-sessions = "0.14.0"
+tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
+cookie = "0.18"
+time = "0.3.41"
 
 
