--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ minijinja-autoreload = "2.11.0"
 num-complex = "0.4.6"
 rand = "0.9.2"
 serde = { version = "1.0.219", features = ["derive"] }
-sqlx =  { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
+serde_json = "1.0.145"
+sqlx =  { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "macros"] }
 tokio = { version = "1.47.1", features = ["full"] }
 uuid = { version = "1.18.0", features = ["v4"] }
 tower-sessions = "0.14.0"
